--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "sweetalert2": "^11.6.16",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
